# dex-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: python-app.yml  test.yml
dex/: __main__.py  cli.py  client.py  config.py  db.py  discord.py  prompts.py  utils.py
dex/integrations/: __init__.py  base.py  factory.py
dex/integrations/mangadex/: __init__.py  client.py
dex/utils/: __init__.py  downloader.py  file.py  pdf.py
src/: client.py  config.py  main.py  prompts.py
tests/: conftest.py  test_mangadex.py  test_mock.py
